--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,13 @@
 </head>
 
 <body>
-
-    <main id="root"></main>
+    <div class="container">
+        <header class="jumbotron uumbotron-fluid bg-primary">
+            <h1>Rob's Random Recommender Tool!</h1>
+        </header>
+        <main id="root"></main>
+        <footer><hr>&copy;Robert Adams -- 2020</footer>
+    </div>
 
 </body>
 </html>
