entry textbox clears after submission

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,9 @@
 
 <body>
     <div class="container">
-        <header class="jumbotron uumbotron-fluid bg-primary">
+        <header class="jumbotron jumbotron-fluid bg-primary">
             <h1>Rob's Random Recommender Tool!</h1>
+            <p>Enter items into your list. Then, click "Recommend!", and a recommendation will appear! Click the item in the list to remove it.</p>
         </header>
         <main id="root"></main>
         <footer><hr>&copy;Robert Adams -- 2020</footer>
