added logic to exclude empty string input

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
             <h1>Rob's Random Recommender Tool!</h1>
             <p>Enter items into your list. Then, click "Recommend!", and a recommendation will appear! Click the item in the list to remove it.</p>
         </header>
-        <main id="root"></main>
+        <main id="root" class="container"></main>
         <footer><hr>&copy;Robert Adams -- 2020</footer>
     </div>
 
